ensure wave top aligns with post callout

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -140,6 +140,10 @@
     }
   }
 
+  .callout {
+    margin-top: -2px; // additional margin to ensure top wave aligns correctly
+  }
+
   &__footer {
     background: var(--color-theme-highlight);
 
